// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom options 1`] = `
Object {
  "content": "custom <br/>**options**
",
  "data": Object {
    "title": "foo",
  },
  "html": "<p>custom <br/><strong>options</strong></p>
",
}
`;

exports[`no options 1`] = `
Object {
  "content": "no **options**
",
  "data": Object {
    "title": "foo",
  },
  "html": null,
}
`;
